.circleci/kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.service: server
  template:
    metadata:
      labels:
        app.service: server
    spec:
      containers:
        - image: $SERVER_DOCKER_IMAGE_NAME:$BUILD_NUMBER
          name: server
          ports:
            - containerPort: 8004
          args:
            - sh
            - run.sh
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 10
          resources:
            requests:
              cpu: 200m
      restartPolicy: Always
