.circleci/kubernetes/base/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      labels:
        io.kompose.network/backend-default: "true"
        io.kompose.service: server
    spec:
      containers:
        - image: server
          name: server
          ports:
            - containerPort: 8004
          args:
            - python
            - app.py
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 10
      restartPolicy: Always
status: {}
