.circleci/kubernetes/base/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  ports:
    - name: "8004"
      port: 8004
      targetPort: 8004
  selector:
    io.kompose.service: server
status:
  loadBalancer: {}
