.circleci/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
    - name: "8004"
      port: 8004
      targetPort: 8004
  selector:
    app.service: server
status:
  loadBalancer: {}
