.circleci/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
spec:
  rules:
  - host: $HOST_NAME
    http:
      paths:
      - backend:
          service:
            name: server
            port:
              number: 8004
        path: /
        pathType: Prefix
