.circleci/kubernetes/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/backend-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/backend-default: "true"
